--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 <body>
   <div class="wrap">
     <div class="card">
-      <h1>レイ運転代行｜ドライバー締め作業 計算ツール</h1>
+      <h1>ドライバー締め作業 計算ツール</h1>
       <!-- 非表示化：ここから -->
       <p class="muted" style="margin:6px 0 0; display:none;">GitHub Pagesで配信可能なスタンドアロン版。入力：売上・経費・決済。自動計算：<b>2種給料</b>・<b>1種給料</b>・<b>残金</b>。ポイントカードは<b>1枚=500円</b>で控除します。</p>
       <p class="notice" style="display:none">給料計算は100円単位で<b>切り上げ</b>処理されます（例：7,581円 → 7,600円）。</p>
