Update page title in index.html

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <meta name="theme-color" content="#2563eb" />
-<title>レイ運転代行｜締め計算ツール（GitHub Pages 版）</title>
+<title>ドライバー締め作業 計算ツール</title>
 <style>
   :root{--bg:#f6f9ff;--card:#fff;--ink:#0f172a;--muted:#667085;--line:#e5e7eb;--accent:#2563eb;--ok:#16a34a;--warn:#ef4444}
   *{box-sizing:border-box}
