--- a/index.html
+++ b/index.html
@@ -99,9 +99,13 @@
       </div>
     </div>
 
-    <div class="card">
-      <h2>結果</h2>
-      <div class="grid cols-3">
+   <div class="card">
+  <h2>
+    結果
+    <span id="resultInfo" class="muted" style="font-size:14px; margin-left:8px;"></span>
+  </h2>
+  <div class="grid cols-3">
+
         <div class="kpi">
           <div class="muted" id="labL">2種給料</div>
           <div class="out mono" id="outL">0 円</div>
