Update footer version from v1.3 to v1.4

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
       </div>
     </div>
 
-    <div class="footer">© レイ運転代行｜締め作業ヘルパー v1.3（100円切り上げ対応）</div>
+    <div class="footer">© レイ運転代行｜締め作業ヘルパー v1.4</div>
   </div>
 
 <script>
